--- a/api-server/.env.example
+++ b/api-server/.env.example
@@ -56,3 +56,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+LINE_MESSAGE_CHANNEL_ID=
+LINE_MESSAGE_CHANNEL_SECRET=
+LINE_MESSAGE_CHANNEL_TOKEN=
+
+DEMO_LINE_USER_ID=
